# mwaa-mcp-server

./: .gitignore  CHANGELOG.md  Dockerfile  NOTICE  README.md  docker-healthcheck.sh  pyproject.toml  requirements-dev.txt  requirements.txt
awslabs/: __init__.py
awslabs/mwaa_mcp_server/: __init__.py  __main__.py  airflow_client.py  prompts.py  server.py  tools.py
tests/: __init__.py  test_server.py
