[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awslabs.mwaa-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Amazon Managed Workflows for Apache Airflow (MWAA)"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "paschmaria", email = ""}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "boto3>=1.34.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/paschmaria/mwaa-mcp-server"
Repository = "https://github.com/paschmaria/mwaa-mcp-server"
"Bug Tracker" = "https://github.com/paschmaria/mwaa-mcp-server/issues"

[project.scripts]
mwaa-mcp-server = "awslabs.mwaa_mcp_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["awslabs"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--asyncio-mode=auto",
]
asyncio_mode = "auto"
